# LearnOpenGL

./: .gitignore  CMakeLists.txt  License.txt  README.md
data/shaders/Miscellaneous/: quad_shader.frag  quad_shader.vert  ray_tracer.comp
data/shaders/ShaderToy/: 1_screen_quad.frag  1_screen_quad.vert  2_simple_ray_marching.frag  3_light_normal.frag  4_CSG.frag
data/shaders/Terrain/: 2_tessellation.frag  2_tessellation.tesc  2_tessellation.tese  2_tessellation.vert  terrain.frag  terrain.vert
include/Util/: camera.h  helper.h  light.h  mesh.h  model.h  shader.h  texture.h
include/glad/: glad.h
lib/: glfw3.lib
src/: CMakeLists.txt
src/Miscellaneous/: CMakeLists.txt
src/Miscellaneous/PetRayTracer/: CMakeLists.txt  pet_ray_tracer.cpp
src/ShaderToy/: CMakeLists.txt
src/ShaderToy/1_first_demo/: 1_first_demo.cpp  CMakeLists.txt
src/Terrain/: CMakelists.txt
src/Terrain/1_height_map/: 1_height_map.cpp  CMakeLists.txt
src/Terrain/2_tessellation/: 2_tessellation.cpp  CMakeLists.txt
src/Util/: CMakeLists.txt  glad.c  stb_image.cpp  util.cpp
